# course

./: CMakeLists.txt  file.txt  main.c
header/: menu.h  output.h  struct.h  work_with_data_and_memory.h  work_with_file.h  work_with_list.h
sourse/: menu.c  output.c  work_with_data_and_memory.c  work_with_file.c  work_with_list.c
